# qrgen

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENCE  README.md  docker-compose.dev.yml  docker-compose.yml  env.sample  pyproject.toml
src/qrgen/: __init__.py  compute.py  server.py
src/qrgen/templates/: index.html
tests/: coverage.conf  test_extension.py
